aws-essentials/VPC.json
{
  "Description": "Test task environment",
  "Parameters": {
    "VpcCIDR": {
      "Description":"CIDR block associated with VPC",
      "Type": "String",
      "Default": "172.16.0.0/16"
    },
    "TestAvailabilityZone": {
      "Description": "Availability zone used to deploy resources",
      "Type": "String",
      "Default": "eu-central-1a"
    },
    "TestAvailabilityZone2": {
      "Description": "Availability zone used to deploy resources",
      "Type": "String",
      "Default": "eu-central-1b"
    }
  },
  "Resources": {
    "AdminRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": "*",
              "Action": [
                "sts:AssumeRole"
              ]
            }
          ]
        },
        "Path": "/",
        "Policies": [
          {
            "PolicyName": "AdminPolicy",
            "PolicyDocument": {
              "Version": "2012-10-17",
              "Statement": [
                {
                  "Effect": "Allow",
                  "Action": "*",
                  "Resource": "*"
                }
              ]
            }
          }
        ]
      }
    },
    "AdminInstanceProfile": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Path": "/",
        "Roles": [ {
          "Ref": "AdminRole"
        } ]
      }
    },
    "TestVPC": {
      "Description": "Test VPC",
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": { "Ref": "VpcCIDR" }
      }
    },
    "PublicSubnet": {
      "Description": "Subnet accessible from the world",
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref": "TestAvailabilityZone" },
        "CidrBlock": "172.16.1.0/24",
        "MapPublicIpOnLaunch": true,
        "VpcId": { "Ref": "TestVPC" },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PublicSubnet"
          }
        ]
      }
    },
    "PrivateSubnet": {
      "Description": "Subnet not accessible from the world",
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref": "TestAvailabilityZone" },
        "CidrBlock": "172.16.2.0/24",
        "MapPublicIpOnLaunch": false,
        "VpcId": { "Ref": "TestVPC" },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateSubnet"
          }
        ]
      }
    },
    "InetGW": {
      "Description": "Internet gateway",
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {}
    },
    "TestInetGWAttachment": {
      "Description": "Internet gateway to VPC attachment",
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": { "Ref": "InetGW" },
        "VpcId": { "Ref": "TestVPC" }
      }
    },
    "PublicSubnetRouteTable": {
      "Description": "Route table for the public subnet",
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "TestVPC" }
      }
    },
    "PublicSubnetDefaultRoute": {
      "Description": "Default route for the public subnet",
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "InetGW" },
        "RouteTableId": { "Ref": "PublicSubnetRouteTable" }
      }
    },
    "PublicSubnetRouteTableAssociation": {
      "Description": "Association of route table with public subnet",
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "PublicSubnetRouteTable" },
        "SubnetId": { "Ref": "PublicSubnet" }
      }
    },
    "PublicSubnetSecurityGroup": {
      "Description": "Security group for access to the public subnet",
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Access to the public subnet",
        "GroupName": "PublicAccess",
        "VpcId": { "Ref": "TestVPC" },
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "Description": "SSH",
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22"
          },
          {
            "Description": "HTTP",
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80"
          },
          {
            "Description": "HTTPS",
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443"
          }
        ]
      }
    },
    "NatAccessSecurityGroup": {
      "Description": "Security group for access via NAT instance",
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SSH access to NAT gateway",
        "GroupName": "SshAccess",
        "VpcId": { "Ref": "TestVPC" },
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "Description": "SSH",
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22"
          },
          {
            "Description": "SSH 4322",
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": "4322",
            "ToPort": "4322"
          }
        ]
      }
    },
    "PrivateInstanceSecurityGroup": {
      "Description": "Access to private instance",
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Access to private instance",
        "GroupName": "PrivateAccess",
        "VpcId": { "Ref": "TestVPC" },
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "Description": "Open access",
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "-1"
          }
        ]
      }
    },
    "PublicInstance1": {
      "Description": "Public instance 1",
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "AvailabilityZone": { "Ref": "TestAvailabilityZone" },
        "IamInstanceProfile": { "Ref": "AdminInstanceProfile" },
        "ImageId": "ami-0cc293023f983ed53",
        "InstanceType": "t2.micro",
        "KeyName": "Key-20190726",
        "NetworkInterfaces": [
          {
            "AssociatePublicIpAddress": "true",
            "DeviceIndex": "0",
            "GroupSet": [
              { "Ref": "PublicSubnetSecurityGroup" }
            ],
            "SubnetId": {
              "Ref": "PublicSubnet"
            }
          }
        ]
      }
    },
    "PublicInstance2": {
      "Description": "Public instance 2",
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "AvailabilityZone": { "Ref": "TestAvailabilityZone" },
        "IamInstanceProfile": { "Ref": "AdminInstanceProfile" },
        "ImageId": "ami-0cc293023f983ed53",
        "InstanceType": "t2.micro",
        "KeyName": "Key-20190726",
        "NetworkInterfaces": [
          {
            "AssociatePublicIpAddress": "true",
            "DeviceIndex": "0",
            "GroupSet": [
              { "Ref": "PublicSubnetSecurityGroup" }
            ],
            "SubnetId": { "Ref": "PublicSubnet" }
          }
        ]
      }
    },
    "PrivateInstance": {
      "Description": "Private instance",
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "AvailabilityZone": { "Ref": "TestAvailabilityZone" },
        "IamInstanceProfile": { "Ref": "AdminInstanceProfile" },
        "ImageId": "ami-0cc293023f983ed53",
        "InstanceType": "t2.micro",
        "KeyName": "Key-20190726",
        "NetworkInterfaces": [
          {
            "AssociatePublicIpAddress": "false",
            "DeviceIndex": "0",
            "GroupSet": [
              { "Ref": "PrivateInstanceSecurityGroup" }
            ],
            "SubnetId": { "Ref": "PrivateSubnet" }
          }
        ]
      }
    },
    "NATInstance": {
      "Description": "NAT instance acting as a bastion host",
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "TestAvailabilityZone"
        },
        "ImageId": "ami-001b36cbc16911c13",
        "InstanceType": "t2.micro",
        "KeyName": "Key-20190726",
        "NetworkInterfaces": [
          {
            "AssociatePublicIpAddress": "true",
            "DeviceIndex": "0",
            "GroupSet": [
              {
                "Ref": "NatAccessSecurityGroup"
              }
            ],
            "SubnetId": {
              "Ref": "PublicSubnet"
            }
          }
        ],
        "SourceDestCheck": "false"
      }
    },
    "PrivateSubnetRouteTable": {
      "Description": "Route table for the private subnet",
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "TestVPC" }
      }
    },
    "PrivateSubnetDefaultRoute": {
      "Description": "Default route for the private subnet",
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "InstanceId": { "Ref": "NATInstance" },
        "RouteTableId": { "Ref": "PrivateSubnetRouteTable" }
      }
    },
    "PrivateSubnetRouteTableAssociation": {
      "Description": "Association of route table with private subnet",
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "PrivateSubnetRouteTable" },
        "SubnetId": { "Ref": "PrivateSubnet" }
      }
    },
    "LohikaNoSqlDb": {
      "Description": "NoSQL database with data",
      "Type": "AWS::DynamoDB::Table",
      "Properties": {
        "TableName": "edu-lohika-training-aws-dynamodb",
        "AttributeDefinitions": [
          {
            "AttributeName": "UserName",
            "AttributeType": "S"
          }
        ],
        "KeySchema" : [
          {
            "AttributeName" : "UserName",
            "KeyType" : "HASH"
          }
        ],
        "BillingMode": "PAY_PER_REQUEST"
      }
    },
    "LohikaSNSTopic": {
      "Type": "AWS::SNS::Topic",
      "Properties": {
        "TopicName": "edu-lohika-training-aws-sns-topic"
      }
    },
    "LohikaSNSSubscription": {
      "Type": "AWS::SNS::Subscription",
      "Properties": {
        "TopicArn": { "Ref": "LohikaSNSTopic" },
        "Protocol": "email",
        "Endpoint": "doctorchd@gmail.com"
      }
    },
    "LohikaSQSQueue": {
      "Type": "AWS::SQS::Queue",
      "Properties": {
        "QueueName": "edu-lohika-training-aws-sqs-queue"
      }
    },
    "LohikaS3Bucket": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "BucketName": "lohika-s3-bucket"
      },
      "DeletionPolicy": "Delete"
    },
    "RDSSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref": "TestAvailabilityZone" },
        "CidrBlock": "172.16.11.0/24",
        "VpcId": { "Ref": "TestVPC" }
      }
    },
    "RDSSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref": "TestAvailabilityZone2" },
        "CidrBlock": "172.16.12.0/24",
        "VpcId": { "Ref": "TestVPC" }
      }
    },
    "RDSSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "RDS subnet group",
        "SubnetIds": [
          { "Ref": "RDSSubnet1" },
          { "Ref": "RDSSubnet2" }
        ]
      }
    },
    "LohikaRDSDb": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AllocatedStorage": "10",
        "AvailabilityZone": { "Ref": "TestAvailabilityZone" },
        "DBInstanceClass": "db.t2.micro",
        "DBName": "EduLohikaTrainingAwsRds",
        "DBSubnetGroupName": { "Ref": "RDSSubnetGroup" },
        "Engine": "postgres",
        "MasterUsername": "rootuser",
        "MasterUserPassword": "rootuser",
        "Port": "5432"
      },
      "DeletionPolicy": "Delete"
    }
  }
}
